# thanatos

./: .env.example  Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
src/: constants.rs  lib.rs  main.rs  utils.rs
src/routers/: chapter.rs  mod.rs  novel.rs  search.rs  version.rs
src/sfacg/: mod.rs  novel.rs  search.rs  user.rs  volumes.rs
