[package]
name = "thanatos"
version = "0.1.2"
authors = ["yurzhang <yurzhang.oi@gmail.com>"]
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.209", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
data-encoding = "2.6.0"
md-5 = "0.10.6"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["http2", "rustls-tls-webpki-roots", "cookies", "json"]

[dependencies.axum]
version = "0.7.5"
default-features = false
features = ["http1", "json", "tokio", "query"]
