[package]
name = "thanatos"
version = "0.1.3"
authors = ["yurzhang <yurzhang.oi@gmail.com>"]
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.15.1", features = ["v4", "fast-rng"] }
data-encoding = "2.8.0"
md-5 = "0.10.6"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["http2", "rustls-tls-webpki-roots", "cookies", "json"]

[dependencies.axum]
version = "0.8.1"
default-features = false
features = ["http1", "json", "tokio", "query"]
