[package]
name = "thanatos"
version = "0.2.1"
authors = ["yurzhang <yurzhang.oi@gmail.com>"]
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dotenvy_macro = "0.15.7"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
novel-api = "0.16.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.axum]
version = "0.8.4"
default-features = false
features = ["http1", "json", "tokio", "query"]
